fixed gap at top

--- a/src/components/LearningPacksPage/LearningPacksPage.css
+++ b/src/components/LearningPacksPage/LearningPacksPage.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   background-color: white;
   padding-bottom: 100px;
-  padding-top: 50px;
 
 }
 
